--- a/3j-Projeto SE LIGA/3J-2Projeto-main/style.css
+++ b/3j-Projeto SE LIGA/3J-2Projeto-main/style.css
@@ -3,7 +3,7 @@
 :root{
     --cor-de-fundo: #8133b4;
     --cor-primaria: #FCFAEE;
-    --cor-secundaria: #4d22e9;
+    --cor-secundaria: #633ee9;
     --fonte: "Nunito Sans", sans-serif;
 }
 
